--- a/index.html
+++ b/index.html
@@ -1,129 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Snake Game</title>
     <style>
         body {
-            background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
+            margin: 0;
+            height: 100vh;
+            background: linear-gradient(135deg, #141e30, #243b55);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
             font-family: Arial, sans-serif;
-            color: white;
         }
 
-        .game-box {
-            text-align: center;
+        .game-container {
+            background: #111;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
         canvas {
             background: #000;
-            border: 4px solid #00ffcc;
-            box-shadow: 0 0 25px #00ffcc;
+            border: 3px solid #0f0;
+            display: block;
         }
 
-        h1 {
-            margin-bottom: 10px;
-            color: #00ffcc;
+        .info {
+            color: #0f0;
+            margin-top: 10px;
+            text-align: center;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
 
-    <div class="game-box">
-        <h1>🐍 SNAKE GAME</h1>
-        <p>Score: <span id="score">0</span></p>
+    <div class="game-container">
         <canvas id="game" width="400" height="400"></canvas>
+        <div class="info">Press any arrow key to start</div>
     </div>
 
     <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
+    const canvas = document.getElementById("game");
+    const ctx = canvas.getContext("2d");
 
-const box = 20;
-let score = 0;
+    const box = 20;
+    let speed = 150;
+    let gameInterval = null;
+    let gameStarted = false;
 
-let snake = [];
-snake[0] = { x: 9 * box, y: 10 * box };
+    let snake = [{ x: 200, y: 200 }];
+    let direction = null;
 
-let food = {
-    x: Math.floor(Math.random() * 19 + 1) * box,
-    y: Math.floor(Math.random() * 19 + 1) * box
-};
+    let food = randomFood();
 
-let d;
+    document.addEventListener("keydown", changeDirection);
 
-document.addEventListener("keydown", direction);
-
-function direction(event) {
-    if (event.keyCode == 37 && d != "RIGHT") d = "LEFT";
-    else if (event.keyCode == 38 && d != "DOWN") d = "UP";
-    else if (event.keyCode == 39 && d != "LEFT") d = "RIGHT";
-    else if (event.keyCode == 40 && d != "UP") d = "DOWN";
-}
-
-function collision(head, array) {
-    for (let i = 0; i < array.length; i++) {
-        if (head.x == array[i].x && head.y == array[i].y) return true;
-    }
-    return false;
-}
-
-function draw() {
-    ctx.fillStyle = "black";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    for (let i = 0; i < snake.length; i++) {
-        ctx.fillStyle = (i == 0) ? "#00ffcc" : "#00cc99";
-        ctx.fillRect(snake[i].x, snake[i].y, box, box);
-
-        ctx.strokeStyle = "#003333";
-        ctx.strokeRect(snake[i].x, snake[i].y, box, box);
-    }
-
-    ctx.fillStyle = "red";
-    ctx.beginPath();
-    ctx.arc(food.x + box/2, food.y + box/2, box/2, 0, Math.PI * 2);
-    ctx.fill();
-
-    let snakeX = snake[0].x;
-    let snakeY = snake[0].y;
-
-    if (d == "LEFT") snakeX -= box;
-    if (d == "UP") snakeY -= box;
-    if (d == "RIGHT") snakeX += box;
-    if (d == "DOWN") snakeY += box;
-
-    if (snakeX == food.x && snakeY == food.y) {
-        score++;
-        document.getElementById("score").innerText = score;
-        food = {
-            x: Math.floor(Math.random() * 19 + 1) * box,
-            y: Math.floor(Math.random() * 19 + 1) * box
+    function randomFood() {
+        return {
+            x: Math.floor(Math.random() * (canvas.width / box)) * box,
+            y: Math.floor(Math.random() * (canvas.height / box)) * box
         };
-    } else {
-        snake.pop();
     }
 
-    let newHead = { x: snakeX, y: snakeY };
+    function changeDirection(e) {
+        if (e.key === "ArrowLeft" && direction !== "RIGHT") direction = "LEFT";
+        if (e.key === "ArrowUp" && direction !== "DOWN") direction = "UP";
+        if (e.key === "ArrowRight" && direction !== "LEFT") direction = "RIGHT";
+        if (e.key === "ArrowDown" && direction !== "UP") direction = "DOWN";
 
-    if (
-        snakeX < 0  snakeX >= canvas.width 
-        snakeY < 0  snakeY >= canvas.height 
-        collision(newHead, snake)
-    ) {
-        clearInterval(game);
-        alert("Game Over! Score: " + score);
-        location.reload();
+        // Start game only after first arrow press
+        if (!gameStarted && direction !== null) {
+            gameStarted = true;
+            gameInterval = setInterval(draw, speed);
+        }
     }
 
-    snake.unshift(newHead);
-}
+    function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-let game = setInterval(draw, 100);
+        // Draw food
+        ctx.fillStyle = "red";
+        ctx.fillRect(food.x, food.y, box, box);
+
+        // Draw snake
+        for (let i = 0; i < snake.length; i++) {
+            ctx.fillStyle = i === 0 ? "#0f0" : "#6f6";
+            ctx.fillRect(snake[i].x, snake[i].y, box, box);
+        }
+
+        let headX = snake[0].x;
+        let headY = snake[0].y;
+
+        if (direction === "LEFT") headX -= box;
+        if (direction === "UP") headY -= box;
+        if (direction === "RIGHT") headX += box;
+        if (direction === "DOWN") headY += box;
+
+        // Wall collision → stop game
+        if (
+            headX < 0 ||
+            headY < 0 ||
+            headX >= canvas.width ||
+            headY >= canvas.height
+        ) {
+            clearInterval(gameInterval);
+            alert("Game Over!");
+            return;
+        }
+
+        // Eat food
+        if (headX === food.x && headY === food.y) {
+            food = randomFood();
+
+            // Increase speed
+            if (speed > 50) {
+                speed -= 5;
+                clearInterval(gameInterval);
+                gameInterval = setInterval(draw, speed);
+            }
+        } else {
+            snake.pop();
+        }
+
+        snake.unshift({ x: headX, y: headY });
+    }
     </script>
 
 </body>
